--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "babel-plugin-styled-components": "^1.12.0",
+    "darkmode-js": "^1.5.7",
     "gatsby": "^3.6.1",
+    "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-image": "^1.6.0",
     "gatsby-plugin-manifest": "^3.6.0",
     "gatsby-plugin-mdx": "^2.6.0",
