--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@fontsource/rubik": "^4.4.2",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@netlify/classnames-template-literals": "^1.0.0",
     "babel-plugin-styled-components": "^1.12.0",
     "darkmode-js": "^1.5.7",
+    "date-fns": "^2.22.1",
     "gatsby": "^3.6.1",
     "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-image": "^1.6.0",
