--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-plugin-styled-components": "^1.12.0",
     "darkmode-js": "^1.5.7",
     "date-fns": "^2.22.1",
+    "font-awesome": "^4.7.0",
     "gatsby": "^3.6.1",
     "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-image": "^1.6.0",
@@ -47,6 +48,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
+    "react-onclickoutside": "^6.11.2",
     "react-router": "^5.2.0",
     "remark-unwrap-images": "^2.0.0",
     "styled-components": "^5.3.0"
